--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="" />
+  <link rel="stylesheet" href="./normalize.css">
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <h1>Rock Paper Scissors</h1>
@@ -25,6 +26,7 @@
         Paper wins against rock.
       </li>
     </ul>
+    <script src="./app.js"></script>
 </body>
 </html>
 
