Add play button with element variable and event listtener

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <h1>Rock Paper Scissors</h1>
     <h2>What are the rules of RPS?</h2>
     <p> 
-      Although the game has a lot of complexity to it, the rules to play it are pretty simple.
-      The game is played where players deliver hand signals that will represent the elements of the game; rock, paper and scissors. The outcome of the game is determined by 3 simple rules:
+      Play against the computer!! Enter rock, paper and scissors and the computer will also make a section. <br><br>The outcome of the game is determined by 3 simple rules:
     </p>
     <ul>
       <li>
@@ -29,6 +28,7 @@
     <h3>
       "Rock, Paper, Scissors, SHOOT!!!"
     </h3>
+    <button>Press to Play!</button>
     <script src="./app.js"></script>
 </body>
 </html>
