Log game results to the display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <h1>Rock Paper Scissors</h1>
+  <h1>Rock Paper Scissors (RPS)</h1>
     <h2>What are the rules of RPS?</h2>
     <p> 
       Play against the computer!! Enter rock, paper and scissors and the computer will also make a section. <br><br>The outcome of the game is determined by 3 simple rules:
@@ -29,7 +29,10 @@
       "Rock, Paper, Scissors, SHOOT!!!"
     </h3>
     <button>Press to Play!</button>
+    <p id="game-stats"></p>
+
     <script src="./app.js"></script>
+
 </body>
 </html>
 
